修改公共地址

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
   <head>
     <title><%= article.title %></title>
     <link rel="shortcut icon" href="/favicon.ico">
-    <link rel='stylesheet' href='/style/common.css' />
-    <link rel='stylesheet' href='/style/article.css' />
-    <link rel='stylesheet' href='/style/normalize.css' />
+    <link rel='stylesheet' href='https://ilife.xinshu.me/static/style/common.css' />
+    <link rel='stylesheet' href='https://ilife.xinshu.me/static/style/article.css' />
+    <link rel='stylesheet' href='https://ilife.xinshu.me/static/style/normalize.css' />
   </head>
   <body>
     <% include content/content.ejs %>
