--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ooops - 404</title>
-  <link rel='stylesheet' href='/style/common.css' />
-  <link rel='stylesheet' href='/style/404.css' />
-  <link rel='stylesheet' href='/style/normalize.css' />
+  <link rel='stylesheet' href='https://ilife.xinshu.me/static/style/common.css' />
+  <link rel='stylesheet' href='https://ilife.xinshu.me/static/style/404.css' />
+  <link rel='stylesheet' href='https://ilife.xinshu.me/static/style/normalize.css' />
 </head>
 <body>
   <header>
