修改图片路径

--- a/public/style/article.css
+++ b/public/style/article.css
@@ -1,1 +1,27 @@
-span a{color:#fff}
+.previewer {
+  padding: 12px 15px;
+  max-width: 768px;
+  margin: 0 auto; }
+  .previewer .title {
+    font-size: 20px;
+    font-weight: 500;
+    color: #41454f; }
+  .previewer .timestamp {
+    font-size: 12px;
+    line-height: 3.0;
+    color: #a6a6a6;
+    margin-bottom: 16px; }
+    .previewer .timestamp > * {
+      margin-right: 10px; }
+    .previewer .timestamp .username {
+      color: #64abff; }
+  .previewer .text {
+    color: #41454f;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.5;
+    margin: 8px 0 0; }
+  .previewer .pic {
+    margin: 8px 0 0;
+    max-width: 1024px;
+    width: 100%; }
