--- a/public/style/article.scss
+++ b/public/style/article.scss
@@ -1,5 +1,34 @@
-span {
-  a {
-    color: #fff;
+.previewer {
+    padding: 12px 15px;
+    max-width: 768px;
+    margin: 0 auto;
+    .title {
+      font-size: 20px;
+      font-weight: 500;
+      color: #41454f;
+    }
+    .timestamp {
+      font-size: 12px;
+      line-height: 3.0;
+      color: #a6a6a6;
+      margin-bottom: 16px;
+      &>* {
+        margin-right: 10px;
+      }
+      .username {
+        color: #64abff;
+      }
+    }
+    .text {
+      color: #41454f;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 1.5;
+      margin: 8px 0 0;
+    }
+    .pic {
+      margin: 8px 0 0;
+      max-width: 1024px;
+      width: 100%;
+    }
   }
-}
