格式发布时间，去除公共token

--- a/views/content/content.ejs
+++ b/views/content/content.ejs
@@ -3,16 +3,17 @@
     <div class="title"><%= article.title %></div>
     <!--时间-->
     <div class="timestamp">
-      <span class="date"><%= new Date(article.createdAt).toLocaleString() %></span>
+      <span class="date"><%= article.createdAt %></span>
       <span class="username"><%= article.author %></span>
-      <span class="read-info">阅读 0</span>
+      <span class="read-info">阅读 <%= article.stat.viewC %></span>
     </div>
     <!--正文部分-->
    <% article.content.paragraphs.forEach(function(item) { %>
       <% item.elements.forEach(function(element) { %>
         <% switch (element.tag) { 
            case "p": %>
-            <p class="text"><%= element.text %></p>
+            <% var text = element.text.replace(/\n/g, '<br/>') %>
+            <p class="text"><%- text %></p>
             <% break 
              case "img": %>
              <% var src = /^\/media\/origin/.test(element.src) ? 'https://app.ilifediary.com' + element.src : element.src %>
